--- a/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -15,6 +15,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="Voa-J9-mWS">
                                 <rect key="frame" x="20" y="20" width="64" height="80"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration">
+                                    <accessibilityTraits key="traits" none="YES" button="YES" image="YES"/>
+                                </accessibility>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="24"/>
                                 <state key="normal" title="">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
@@ -305,7 +308,7 @@
                                 </connections>
                             </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" id="KeA-7d-3c9">
-                                <rect key="frame" x="160" y="408" width="51" height="44"/>
+                                <rect key="frame" x="160" y="407" width="51" height="44"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <segments>
                                     <segment title="2"/>
@@ -318,7 +321,7 @@
                     <connections>
                         <outlet property="dealButton" destination="dNL-DB-0QG" id="Y23-OX-kdE"/>
                         <outlet property="flipsLabel" destination="ZU4-As-kmH" id="ty0-9S-Uab"/>
-                        <outlet property="gameModeSwitch" destination="KeA-7d-3c9" id="rEz-oR-vMb"/>
+                        <outlet property="gameModeSegmentedControl" destination="KeA-7d-3c9" id="5Hd-rK-jAw"/>
                         <outlet property="resultLabel" destination="DDM-Dm-mmN" id="iBY-YY-yFz"/>
                         <outlet property="scoreLabel" destination="XxJ-pS-uVe" id="K7b-p8-fQr"/>
                         <outletCollection property="cardButtons" destination="Voa-J9-mWS" id="2fr-LH-ITm"/>
@@ -343,21 +346,6 @@
             </objects>
         </scene>
     </scenes>
-    <classes>
-        <class className="CardGameViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/CardGameViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="flipCard:" candidateClass="UIButton"/>
-                <relationship kind="action" name="reDealCards:"/>
-                <relationship kind="outlet" name="dealButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="flipsLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="gameModeSwitch" candidateClass="UISegmentedControl"/>
-                <relationship kind="outlet" name="resultLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
-                <relationship kind="outletCollection" name="cardButtons" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
