--- a/Matchismo/en.lproj/MainStoryboard.storyboard
+++ b/Matchismo/en.lproj/MainStoryboard.storyboard
@@ -242,6 +242,7 @@
                             <constraint firstItem="cfb-bn-5Bt" firstAttribute="leading" secondItem="8ep-Oe-4Qg" secondAttribute="trailing" constant="8" symbolic="YES" type="user" id="OnR-Jr-Tcs"/>
                             <constraint firstAttribute="bottom" secondItem="qkW-RO-Y7d" secondAttribute="bottom" constant="20" symbolic="YES" type="user" id="SH0-ia-pVU"/>
                             <constraint firstAttribute="bottom" secondItem="8ep-Oe-4Qg" secondAttribute="bottom" constant="20" symbolic="YES" type="user" id="X8j-Ng-7HH"/>
+                            <constraint firstItem="cfb-bn-5Bt" firstAttribute="top" secondItem="Dcq-5e-TSC" secondAttribute="bottom" constant="8" type="user" id="hfW-G2-oMV"/>
                             <constraint firstItem="Dcq-5e-TSC" firstAttribute="leading" secondItem="x4J-cS-UrJ" secondAttribute="leading" type="default" id="hrP-sH-7F2"/>
                             <constraint firstItem="2gv-dI-COJ" firstAttribute="leading" secondItem="qkW-RO-Y7d" secondAttribute="trailing" constant="8" symbolic="YES" type="user" id="igM-ak-AEN"/>
                             <constraint firstItem="Dcq-5e-TSC" firstAttribute="top" secondItem="x4J-cS-UrJ" secondAttribute="top" type="default" id="n3U-f6-bUE"/>
@@ -251,7 +252,8 @@
                             <constraint firstAttribute="bottom" secondItem="cfb-bn-5Bt" secondAttribute="bottom" constant="20" symbolic="YES" type="user" id="sQK-UO-pvc"/>
                             <constraint firstAttribute="bottom" secondItem="2gv-dI-COJ" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="uyn-kn-FHk"/>
                             <constraint firstItem="2gv-dI-COJ" firstAttribute="baseline" secondItem="cfb-bn-5Bt" secondAttribute="baseline" type="user" id="vBs-z4-WS3"/>
-                            <constraint firstItem="8ep-Oe-4Qg" firstAttribute="top" secondItem="Dcq-5e-TSC" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="wjI-z8-x6j"/>
+                            <constraint firstItem="8ep-Oe-4Qg" firstAttribute="top" secondItem="Dcq-5e-TSC" secondAttribute="bottom" constant="8" symbolic="YES" type="user" id="wjI-z8-x6j"/>
+                            <constraint firstItem="qkW-RO-Y7d" firstAttribute="top" secondItem="Dcq-5e-TSC" secondAttribute="bottom" constant="8" type="user" id="zCO-JO-whV"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Game Scores" image="TabBarGameScores.png" id="x3b-5x-FeA"/>
@@ -269,6 +271,56 @@
         <image name="TabBarGameScores.png" width="30" height="30"/>
         <image name="TabBarMatchismo.png" width="30" height="30"/>
     </resources>
+    <classes>
+        <class className="CardGameViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/CardGameViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="flipCard:" candidateClass="UITapGestureRecognizer"/>
+                <relationship kind="outlet" name="cardCollectionView" candidateClass="UICollectionView"/>
+                <relationship kind="outlet" name="dealButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="flipsLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="gameModeSegmentedControl" candidateClass="UISegmentedControl"/>
+                <relationship kind="outlet" name="resultLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="scoreLabel" candidateClass="UILabel"/>
+            </relationships>
+        </class>
+        <class className="GameResultViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/GameResultViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="resetGameResults:"/>
+                <relationship kind="action" name="sortScores:" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="gameResultsTableView" candidateClass="UITableView"/>
+                <relationship kind="outlet" name="resetButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+        <class className="PlayingCardCollectionViewCell" superclassName="UICollectionViewCell">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayingCardCollectionViewCell.h"/>
+            <relationships>
+                <relationship kind="outlet" name="playingCardView" candidateClass="PlayingCardView"/>
+            </relationships>
+        </class>
+        <class className="PlayingCardGameViewController" superclassName="CardGameViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayingCardGameViewController.h"/>
+        </class>
+        <class className="PlayingCardView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/PlayingCardView.h"/>
+        </class>
+        <class className="UICollectionReusableView" superclassName="UIView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionReusableView.h"/>
+        </class>
+        <class className="UICollectionViewCell" superclassName="UICollectionReusableView">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewCell.h"/>
+        </class>
+        <class className="UICollectionViewFlowLayout" superclassName="UICollectionViewLayout">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewFlowLayout.h"/>
+        </class>
+        <class className="UICollectionViewLayout" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/UICollectionViewLayout.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
